# molting-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  CURRENT_TASK.md  MISSION_PHASE_1B.md  Makefile  PLAN.md  PYTHON_SETUP.md  README.md  REFACTORING_TODO.md  auto-work.sh  pyproject.toml
.beads/: .gitignore  beads.jsonl  config.yaml  deletions.jsonl  issues.jsonl
.claude/: settings.local.json
.claude/commands/: sync-main.md  work-all.md  work-next.md
.claude/prompts/: add-test-category.md  fix-skipped-tests-parallel.md
.github/: CLAUDE_REVIEW_SETUP.md  copilot-instructions.md
.github/workflows/: ci.yml  claude-code-review.yml  close-beads-issue.yml
docs/: BEADS_IMPORT.md  composing-methods.md  dealing-with-generalization.md  moving-features.md  organizing-data.md  simplifying-conditionals.md  simplifying-method-calls.md  test-strategy.md
history/: ARCHITECTURE_NOTES.md  PROOF_OF_CONCEPT.md  REFACTORING_TODO.md
hooks/: pre-commit  pre-push
molting/: __init__.py  cli.py
molting/commands/: __init__.py  base.py  registry.py
molting/core/: __init__.py  ast_utils.py  ast_validators.py  call_site_updater.py  class_aware_transformer.py  class_aware_validator.py  code_generation_utils.py  conditional_pattern.py  cross_scope_analyzer.py  decorator_handler.py  delegate_member_discovery.py  import_utils.py  instance_variable_tracker.py  local_variable_analyzer.py  method_inserter.py  name_conflict_validator.py  property_utils.py  refactoring_base.py  reference_searcher.py  symbol_context.py  transformers.py  variable_flow_analyzer.py  variable_lifetime_analyzer.py  visitors.py
molting/refactorings/: __init__.py
molting/utils/: __init__.py  ast_helpers.py  code_analysis.py
scripts/: README.md  auto-merge-prs.sh  auto-work.py  fix-build-failures.sh  resolve-merge-conflicts.sh  setup-cron.sh
tests/: README.md  conftest.py  test_add_parameter.py  test_ast_utils.py  test_auto_work.py  test_auto_work_integration.py  test_base_command.py  test_code_generation_utils.py  test_composing_methods.py  test_consolidate_conditional_expression.py  test_consolidate_duplicate_conditional_fragments.py  test_dealing_with_generalization.py  test_decompose_conditional.py  test_encapsulate_field.py  test_extract_method.py  test_extract_variable.py  test_hide_method.py  test_import_utils.py  test_inline_method.py  test_inline_temp.py  test_introduce_assertion.py  test_introduce_explaining_variable.py  test_introduce_parameter.py  test_move_field.py  test_move_method.py  test_moving_features.py  test_organizing_data.py  test_remove_assignments_to_parameters.py  test_remove_control_flag.py  test_remove_parameter.py  test_remove_setting_method.py  test_rename.py  test_replace_constructor_with_factory_function.py  test_replace_magic_number_with_symbolic_constant.py  test_replace_nested_conditional_with_guard_clauses.py  test_simplifying_conditionals.py  test_simplifying_method_calls.py  test_split_temporary_variable.py  test_transformers.py  test_visitors.py
tests/composing_methods/: test_extract_function.py  test_extract_method.py  test_inline_method.py  test_inline_temp.py  test_introduce_explaining_variable.py  test_remove_assignments_to_parameters.py  test_replace_method_with_method_object.py  test_replace_temp_with_query.py  test_split_temporary_variable.py  test_substitute_algorithm.py
tests/core/: test_ast_validators.py  test_call_site_updater.py  test_class_aware_transformer.py  test_class_aware_validator.py  test_cross_scope_analyzer.py  test_delegate_member_discovery.py  test_property_utils.py  test_refactoring_base.py  test_reference_searcher.py  test_symbol_context.py  test_variable_flow_analyzer.py  test_variable_lifetime_analyzer.py
tests/dealing_with_generalization/: test_collapse_hierarchy.py  test_extract_interface.py  test_extract_subclass.py  test_extract_superclass.py  test_form_template_method.py  test_pull_up_constructor_body.py  test_pull_up_field.py  (+5 more)
(+764 files in other folders)
